--- a/TEST SERVER/Beta/Beta/templates/main/CarDetail.html
+++ b/TEST SERVER/Beta/Beta/templates/main/CarDetail.html
@@ -41,13 +41,13 @@
     <h1 class="autohub-title mb-10">AutoHub</h1>
     <nav class="space-y-6 text-left">
       <a href="{% url 'homepage' %}" class="block text-white">HOME</a>
-      <a href="#" class="block text-white">SUV</a>
-      <a href="#" class="block text-white">MPV</a>
-      <a href="#" class="block text-white">HATCHBACK</a>
-      <a href="#" class="block text-white">SEDAN</a>
-      <a href="#" class="block text-white">COUPE</a>
-      <a href="#" class="block text-white">LUXURY</a>
-      <a href="#" class="block text-white">SPORT</a>
+      <a href="{% url 'SUV_category' %}" class="block text-white">SUV</a>
+      <a href="{% url 'MPV_category' %}" class="block text-white">MPV</a>
+      <a href="{% url 'hatchback_category' %}" class="block text-white">HATCHBACK</a>
+      <a href="{% url 'sedan_category' %}" class="block text-white">SEDAN</a>
+      <a href="{% url 'coupe_category' %}" class="block text-white">COUPE</a>
+      <a href="{% url 'luxury_category' %}" class="block text-white">LUXURY</a>
+      <a href="{% url 'sport_category' %}" class="block text-white">SPORT</a>
     </nav>
     <div class="space-y-4 mt-10">
       <a href="{% url 'about' %}" class="flex items-center space-x-2">
@@ -55,7 +55,7 @@
           <span>About</span>
       </a>
     </div>
-      <a href="#" class="flex items-center space-x-2">
+      <a href="{% url 'login' %}" class="flex items-center space-x-2">
         <i class="fas fa-sign-out-alt"></i><span>Log out</span>
       </a>
     </div>
@@ -73,15 +73,15 @@
     </div>    
     <div class="absolute top-4 right-4 flex space-x-4 text-gray-600">
         <!-- Profile Icon -->
-        <button aria-label="Profile" class="hover:text-gray-200">
+        <a href="{% url 'profile' %}" aria-label="Profile" class="hover:text-gray-200">
           <img src="https://i.ibb.co/d489N1xY/image-27.png" alt="Profile" class="w-6 h-6">
-        </button>
-      
+        </a>
+
         <!-- Search Icon -->
-        <button aria-label="Search" class="hover:text-gray-200">
+        <a href="{% url 'search' %}" aria-label="Search" class="hover:text-gray-200">
           <img src="https://i.ibb.co/N2X0BD7S/search.png" alt="Search" class="w-6 h-6">
-        </button>
-      </div>
+        </a>
+        </div>
   
     <main class="flex-grow flex flex-col justify-center items-center mt-2">
 
