fixed hamburger in view all

--- a/AS2/project/templates/project/profile.html
+++ b/AS2/project/templates/project/profile.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 
-<body class="font-sans">
+<body class="font-sans relative">
 
   <!-- Header -->
   <div class="relative bg-[#7F7F7F] h-[168px] flex items-start justify-between px-5 pt-4" style="width: 430px; flex-shrink: 0;">
